{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 36,
  "lineage": "fac619bf-415e-a537-9a9e-486655e918f1",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f34bf9aeacdf007",
            "arn": "arn:aws:ec2:eu-north-1:612100883299:instance/i-03a88a8f2ff8843cc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a88a8f2ff8843cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "asad_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-075e184678f26a316",
            "private_dns": "ip-10-0-10-30.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.30",
            "public_ip": "16.170.148.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-002a344591a0a4db3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0338ffc52aedde3d7",
            "tags": {
              "Name": "jump-server"
            },
            "tags_all": {
              "Name": "jump-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0675946d45d8d375c"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_for_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062a04a4760e22803",
            "arn": "arn:aws:ec2:eu-north-1:612100883299:elastic-ip/eipalloc-062a04a4760e22803",
            "association_id": "eipassoc-0b22230209b332670",
            "domain": "vpc",
            "id": "eipalloc-062a04a4760e22803",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0d9c3acb2f2f34436",
            "private_dns": "ip-10-0-10-55.eu-north-1.compute.internal",
            "private_ip": "10.0.10.55",
            "public_dns": "ec2-16-170-32-106.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.32.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f0caf547adfb3d6",
            "arn": "arn:aws:ec2:eu-north-1:612100883299:elastic-ip/eipalloc-01f0caf547adfb3d6",
            "association_id": "eipassoc-095a3adf95b937670",
            "domain": "vpc",
            "id": "eipalloc-01f0caf547adfb3d6",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0ce0d9cca6abc50cb",
            "private_dns": "ip-10-0-20-52.eu-north-1.compute.internal",
            "private_ip": "10.0.20.52",
            "public_dns": "ec2-13-62-30-124.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.30.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:internet-gateway/igw-0abbf50150aabc6c4",
            "id": "igw-0abbf50150aabc6c4",
            "owner_id": "612100883299",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062a04a4760e22803",
            "association_id": "eipassoc-0b22230209b332670",
            "connectivity_type": "public",
            "id": "nat-05b5a2ca1bca77172",
            "network_interface_id": "eni-0d9c3acb2f2f34436",
            "private_ip": "10.0.10.55",
            "public_ip": "16.170.32.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0338ffc52aedde3d7",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_for_nat",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f0caf547adfb3d6",
            "association_id": "eipassoc-095a3adf95b937670",
            "connectivity_type": "public",
            "id": "nat-024d7c6352caf8fe7",
            "network_interface_id": "eni-0ce0d9cca6abc50cb",
            "private_ip": "10.0.20.52",
            "public_ip": "13.62.30.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01434dbf7e2e74b4a",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_for_nat",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:route-table/rtb-0c51308ff10c01dd0",
            "id": "rtb-0c51308ff10c01dd0",
            "owner_id": "612100883299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b5a2ca1bca77172",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_for_nat",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:route-table/rtb-01f8534e6bb5d037f",
            "id": "rtb-01f8534e6bb5d037f",
            "owner_id": "612100883299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-024d7c6352caf8fe7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_for_nat",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:route-table/rtb-091ef8b20a7002ecc",
            "id": "rtb-091ef8b20a7002ecc",
            "owner_id": "612100883299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0abbf50150aabc6c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db9a912610c7e748",
            "route_table_id": "rtb-0c51308ff10c01dd0",
            "subnet_id": "subnet-0f67a366135f29ed5"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_for_nat",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b6e240304e175c4",
            "route_table_id": "rtb-01f8534e6bb5d037f",
            "subnet_id": "subnet-07b3e167d1aed0706"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip_for_nat",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0aa8d710f930a61",
            "route_table_id": "rtb-091ef8b20a7002ecc",
            "subnet_id": "subnet-0338ffc52aedde3d7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0950ff8c64df474d2",
            "route_table_id": "rtb-091ef8b20a7002ecc",
            "subnet_id": "subnet-01434dbf7e2e74b4a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_private_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:security-group/sg-014de6bd76dc68ae1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014de6bd76dc68ae1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Private-SSH-only",
            "name_prefix": "",
            "owner_id": "612100883299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_public_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:security-group/sg-0ebacf851b249012d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebacf851b249012d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-SSH-only",
            "name_prefix": "",
            "owner_id": "612100883299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:subnet/subnet-0ae30f53f89199745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae30f53f89199745",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "612100883299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:subnet/subnet-03ce94495ce637e57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ce94495ce637e57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "612100883299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:subnet/subnet-0f67a366135f29ed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f67a366135f29ed5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "612100883299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:subnet/subnet-07b3e167d1aed0706",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b3e167d1aed0706",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "612100883299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:subnet/subnet-0338ffc52aedde3d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0338ffc52aedde3d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612100883299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:subnet/subnet-01434dbf7e2e74b4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01434dbf7e2e74b4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612100883299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "vpc_id": "vpc-0c4ae6c7da850fb73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "virtual_private_cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:vpc/vpc-0c4ae6c7da850fb73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-051c3a5abe0fff30b",
            "default_route_table_id": "rtb-008b312f3c999edf8",
            "default_security_group_id": "sg-0675946d45d8d375c",
            "dhcp_options_id": "dopt-068370dd587943e19",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4ae6c7da850fb73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-008b312f3c999edf8",
            "owner_id": "612100883299",
            "tags": {
              "Name": "asad-vpc"
            },
            "tags_all": {
              "Name": "asad-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "private_allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:security-group-rule/sgr-0464eb1feb4556cff",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0464eb1feb4556cff",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-014de6bd76dc68ae1",
            "security_group_rule_id": "sgr-0464eb1feb4556cff",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.allow_private_ssh",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "public_allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:security-group-rule/sgr-0a1b0d5fa42b86916",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a1b0d5fa42b86916",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ebacf851b249012d",
            "security_group_rule_id": "sgr-0a1b0d5fa42b86916",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.allow_public_ssh",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:security-group-rule/sgr-0c2cc02d7bb8b389d",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c2cc02d7bb8b389d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-014de6bd76dc68ae1",
            "security_group_rule_id": "sgr-0c2cc02d7bb8b389d",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.allow_private_ssh",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_public_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:612100883299:security-group-rule/sgr-0d27d727724298040",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d27d727724298040",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ebacf851b249012d",
            "security_group_rule_id": "sgr-0d27d727724298040",
            "tags": {
              "Name": "asad-terraform"
            },
            "tags_all": {
              "Name": "asad-terraform"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.allow_public_ssh",
            "module.vpc.aws_vpc.virtual_private_cloud"
          ]
        }
      ]
    }
  ]
}